--- a/GLCM.html
+++ b/GLCM.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <h2>GLCM Web App (Saravanan R)</h2>
+  <h2>GLCM Web App (Gray-Level Co-Occurrence Matrix)</h2>
 
   <div style="vertical-align: middle;display: table-cell">
     <label>Input Matrix:</label>
